# dm_monitor_setup

./: .gitignore  Cargo.toml  README.md
src/: config.rs  core.rs  custom_errors.rs  defaults.rs  dmenu_cmd.rs  dmenu_interface.rs  dmenu_ms.rs  help.rs  layouts_config.rs  main.rs  monitor_layout.rs  monitor_setup.rs  params.rs  screen_opts.rs  ui.rs
src/cmd/: dmenu.rs  mod.rs  term.rs  xrandr.rs
src/core/: daemon.rs  handlers.rs  ms_launcher.rs  utils.rs
src/core/handlers/: command_line.rs  dmenu.rs  term.rs  term_error.rs  xrandr.rs
src/core/ms_launcher/: layout_creator.rs  layout_manager.rs
src/core/utils/: layout_config.rs  layout_error.rs  monitor.rs  monitor_error.rs  monitor_layout.rs  monitor_options.rs
src/dmenu_interface/: dmenu_ms.rs  layout_creator.rs  layout_manager.rs  mod.rs
src/ui/: dmenu_ui.rs
