[package]
name = "dmenu_ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrandr = "0.1.1"
glutin = "0.29.1"
# winit = "0.27.3"
toml = "0.5.9"
serde_derive = "1.0.144"
serde = "1.0.144"
dirs = "4.0.0"
